# cppbackend-november

.github/workflows/: main.yml
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt  leave_game.xml
sprint4/problems/leave_game/solution/data/: config.json
sprint4/problems/leave_game/solution/src/: api_handler.cpp  api_handler.h  app.cpp  app.h  collision_detector.cpp  collision_detector.h  extra_data.h  geom.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  loot_generator.cpp  loot_generator.h  main.cpp  map_parser.cpp  map_parser.h  model.cpp  model.h  postgres.cpp  postgres.h  request_handler.cpp  request_handler.h  retired_players.h  serialization.h  server_logger.cpp  server_logger.h  util.cpp  util.h
sprint4/problems/leave_game/solution/tests/: collision-detector-tests.cpp
